--- a/notebooks/tutorial/1 - Setup.ipynb
+++ b/notebooks/tutorial/1 - Setup.ipynb
@@ -7,7 +7,11 @@
    "source": [
     "## Welcome\n",
     "\n",
-    "Welcome to the PureSkill.gg "
+    "Welcome to the PureSkill.gg data science and coaching system. Data from CS:GO matches were extracted into files we call \"Counter Strike Data Science\" or CSDS files. We have found that working with these files locally is sufficient for most data science operations. Working in the cloud is possible but may require extending some of our software.\n",
+    "\n",
+    "Individual match data are in the CSDS files, and we engineer and combine data from many matches into a \"tome\". Tomes are made through the tome creator. The tomes are great for training models and visualizing the data across many matches.\n",
+    "\n",
+    "In this tutorial, we will setup the enviornment, download a sample of data, create header tomes, explore some match data to create an engineering pipeline, apply that pipeline to the sample data to create a tome, and finally go through that tome to train a model."
    ]
   },
   {
@@ -23,7 +27,9 @@
     "1. Where you will save your tomes (views of the data).\n",
     "1. What to call your header tome.\n",
     "\n",
-    "These will be saved in a `.env` file in the `notebooks` folder. Fill these out below."
+    "These will be saved in a `.env` file in the `notebooks` folder. \n",
+    "\n",
+    "_**Fill out with your specific paths in the cell below, then run the notebook.**_\n"
    ]
   },
   {
