--- a/notebooks/tutorial/2 - Download data.ipynb
+++ b/notebooks/tutorial/2 - Download data.ipynb
@@ -7,17 +7,17 @@
    "source": [
     "## Downloading the data\n",
     "\n",
-    "We built in a simple downloader for the sample data. This one is quite slow so you may want to copy the data to your S3 bucket then use something like `aws s3 sync s3://your-cool-bucket/sample-csds-micro .` to download locally.\n",
+    "We built in a simple downloader for the sample data. For a larger dataset, you may want to copy the data to your S3 bucket then use something like `aws s3 sync s3://your-cool-bucket/sample-csds-micro .` to download locally.\n",
     "\n",
-    "Set your dataset_id from AWS. You can find this by: \n",
+    "Set your `dataset_id` from AWS. You can find this by: \n",
     "\n",
     "- Go to the AWS Data Exchange.\n",
     "- Under \"My Subscriptions\" click \"Entitled data\".\n",
     "- Find `PureSkill.gg Competitive CS:GO Sample Data` in the list.\n",
     "- Expand the dropdown to find `sample-csds-micro` and click on it.\n",
-    "- there is a collapsable \"Data set overview\" box near the top, expanding this will reveal the Data set ID.\n",
+    "- Expand the \"Data set overview\" box near the top to reveal the Data set ID.\n",
     "\n",
-    "Replace the dataset_id parameter below with your particular ID.\n",
+    "_**Replace the `dataset_id` parameter below with your particular ID then run the notebook.**_\n",
     "\n",
     "Note: you can safely stop and restart this downloader."
    ]
