--- a/notebooks/tutorial/3 - Make header tome.ipynb
+++ b/notebooks/tutorial/3 - Make header tome.ipynb
@@ -7,7 +7,11 @@
    "source": [
     "## Make header tome\n",
     "\n",
-    "No need to change anything in here, just run the notebook to create the header tome"
+    "The header tome uses glob to find your files, read in the header channel, and stitch them all together into a *header tome*. Each row corresponds to one match. CSDS files that are not in the main header tome are invisible in subsequent steps. Right now, the file search assumes your files are nested to the same level, but a more robust csds finder is possible, just open a PR.\n",
+    "\n",
+    "You can also make subheader tomes that select a fraction of the header tome rows. An example of a subheader tome that selects only matches on dust2 is in the second to last cell. Subheader tomes are useful when exploring certain maps, skill ranges, or anything that can be selected for from a header. \n",
+    "\n",
+    "_**Run this notebook as-is.**_"
    ]
   },
   {
@@ -77,6 +81,29 @@
     "    print('something went wrong when making the header.')\n",
     "else:\n",
     "    print('there are',len(df),'matches',len(keys))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75bc80ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def map_selector(map_name):\n",
+    "    return lambda df: df['map_name']==map_name\n",
+    "\n",
+    "subheader_loader = curator.create_subheader_tome('subheader_dust2', map_selector('de_dust2'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93fba090",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = subheader_loader.get_dataframe()"
    ]
   }
  ],
