--- a/notebooks/tutorial/6 - Train data science models.ipynb
+++ b/notebooks/tutorial/6 - Train data science models.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ce671603",
+   "id": "55b68a58",
    "metadata": {},
    "source": [
-    "## Time to do some data science\n",
+    "## Explore tome and train models\n",
     "\n",
-    "Below is an example of the thing"
+    "Let's read in that tome and train a model to go from number of footsteps to rank, obviously."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5689c518",
+   "id": "461fd17e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a60d787e",
+   "id": "25efcdd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a70afe96",
+   "id": "1cba959d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,62 +59,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b4ed755",
+   "id": "6364d528",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pureskillgg_dsdk import create_ds_models, GameDsLoader, DsReaderS3, DsReaderFs"
+    "df = curator.get_dataframe('footsteps_by_rank')\n",
+    "keyset = curator.get_keyset('footsteps_by_rank')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94358814",
+   "id": "5ecd6dcc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "csds_reader = DsReaderFs(\n",
-    "    root_path=os.environ.get('PURESKILLGG_TOME_DS_COLLECTION_PATH'),\n",
-    "    manifest_key='0CTkNPRTVdUYQ5c6LOej/csds',\n",
-    ")\n",
+    "print(len(df),len(keyset))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2907a8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73fa1640",
+   "metadata": {},
+   "source": [
+    "## Training a model left as exercise to user\n",
     "\n",
-    "csds_loader = GameDsLoader(reader=csds_reader)"
+    ":) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bb9d82b",
+   "id": "7c3a15e3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "manifest = csds_loader.manifest"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ad39697",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = csds_loader.get_channels()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16f3aef9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['grenade_state']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1bcb33df",
+   "id": "0fff4c68",
    "metadata": {},
    "outputs": [],
    "source": []
