Working version of tutorial notebooks

--- a/notebooks/tutorial/2 - Download data.ipynb
+++ b/notebooks/tutorial/2 - Download data.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "## Downloading the data\n",
     "\n",
-    "We built in a simple downloader for the sample data. For a larger dataset, you may want to copy the data to your S3 bucket then use something like `aws s3 sync s3://your-cool-bucket/sample-csds-micro .` to download locally.\n",
+    "We built in a simple downloader for the sample data. The sample data are 12 matches and consist of ~400 files and ~300mb and takes ~20 minutes to download with the simple downloader. For a larger dataset, you may want to copy the data to your S3 bucket then use something like `aws s3 sync s3://your-cool-bucket/sample-csds-micro .` to download locally.\n",
     "\n",
     "Set your `dataset_id` from AWS. You can find this by: \n",
     "\n",
-    "- Go to the AWS Data Exchange.\n",
+    "- Log in to AWS and go to the AWS Data Exchange.\n",
     "- Under \"My Subscriptions\" click \"Entitled data\".\n",
     "- Find `PureSkill.gg Competitive CS:GO Sample Data` in the list.\n",
     "- Expand the dropdown to find `sample-csds-micro` and click on it.\n",
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_id = 'YOUR ID'"
+    "dataset_id = 'ADD_DATASET_ID_HERE'"
    ]
   },
   {
@@ -50,7 +50,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c63629e9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "output_path = os.environ.get('PURESKILLGG_TOME_DS_COLLECTION_PATH')\n",
