--- a/notebooks/tutorial/5 - Create tome.ipynb
+++ b/notebooks/tutorial/5 - Create tome.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "setup_notebook()"
+    "setup_notebook(silent=True)"
    ]
   },
   {
@@ -81,7 +81,7 @@
     "tomer = curator.make_tome(\n",
     "    'footsteps_by_rank',\n",
     "    header_tome_name = header_name,\n",
-    "    behavior_if_partial='continue',\n",
+    "    behavior_if_partial='overwrite',\n",
     "    ds_reading_instructions=[\n",
     "        {\n",
     "            \"channel\": 'player_footstep',\n",
@@ -106,8 +106,8 @@
    "source": [
     "for data, key in tomer.iterate():\n",
     "    df_footsteps_total = aggregate_footsteps(data['player_footstep'])\n",
-    "    df_pi_simple = simplify_player_info(data['player_footstep'])\n",
-    "    map_name = aggregate_footsteps(data['header'])\n",
+    "    df_pi_simple = simplify_player_info(data['player_info'])\n",
+    "    map_name = get_map_name(data['header'])\n",
     "    df_final = assemble_final_df(df_footsteps_total, df_pi_simple, map_name)\n",
     "    df_final['match_key'] = key\n",
     "    tomer.concat(df_final)"
@@ -117,6 +117,26 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9103febe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = curator.get_dataframe('footsteps_by_rank')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2fff1cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d335208e",
    "metadata": {},
    "outputs": [],
    "source": []
