--- a/notebooks/tutorial/6 - Train data science models.ipynb
+++ b/notebooks/tutorial/6 - Train data science models.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "## Explore tome and train models\n",
     "\n",
-    "Let's read in that tome and train a model to go from number of footsteps to rank, obviously."
+    "Let's read in that tome and train a model to go from number of footsteps to rank, obviously.\n",
+    "\n",
+    "_**Run this notebook as-is.**_"
    ]
   },
   {
@@ -27,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "setup_notebook()"
+    "setup_notebook(silent=True)"
    ]
   },
   {
