--- a/notebooks/tutorial/3 - Make header tome.ipynb
+++ b/notebooks/tutorial/3 - Make header tome.ipynb
@@ -80,7 +80,7 @@
     "if df is None:\n",
     "    print('something went wrong when making the header.')\n",
     "else:\n",
-    "    print('there are',len(df),'matches',len(keys))"
+    "    print('there are',len(df),'matches in the header')"
    ]
   },
   {
@@ -105,6 +105,22 @@
    "source": [
     "df = subheader_loader.get_dataframe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd9b2092",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "122d4dfa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
