--- a/notebooks/tutorial/4 - Do datascience exploration.ipynb
+++ b/notebooks/tutorial/4 - Do datascience exploration.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "Below is an example of exploring the data for a single match. We will explore the number of footsteps players make as a function of rank, wins, and friendly commends.\n",
     "\n",
-    "After developing the functions that do our data processing, we moved them to `pureskillgg_makenew_pyskill\\tutorial_datascience\\footsteps_example.py` so that we can export them to the next notebook and avoid code duplication. This also lets the PureSkill.gg Coach import these functions."
+    "After developing the functions that do our data processing, we moved them to `pureskillgg_makenew_pyskill\\tutorial_datascience\\footsteps_example.py` so that we can export them to the next notebook and avoid code duplication. This also lets the PureSkill.gg Coach import these functions.\n",
+    "\n",
+    "_**Run this notebook as-is.**_"
    ]
   },
   {
@@ -29,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "setup_notebook()"
+    "setup_notebook(silent=True)"
    ]
   },
   {
@@ -65,8 +67,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pureskillgg_dsdk import DsReaderFs"
+    "from pureskillgg_dsdk import DsReaderFs, GameDsLoader"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "135122ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "header_name = os.environ.get('PURESKILLGG_TOME_DEFAULT_HEADER_NAME')\n",
+    "df_header = curator.get_dataframe(header_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dede74a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_header.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad65a2ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_path=df_header.head(2)['ds_path'][0]\n",
+    "key=df_header.head(2)['key'][0]\n",
+    "root_path = full_path.split(key)[0]\n",
+    "manifest_key = os.sep.join([key,'csds'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fa8e42d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -75,9 +119,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# os.environ.get('PURESKILLGG_TOME_DS_COLLECTION_PATH')\n",
     "csds_reader = DsReaderFs(\n",
-    "    root_path=os.environ.get('PURESKILLGG_TOME_DS_COLLECTION_PATH'),\n",
-    "    manifest_key='0CTkNPRTVdUYQ5c6LOej/csds',\n",
+    "    root_path=root_path,\n",
+    "    manifest_key=manifest_key,\n",
     ")\n",
     "\n",
     "csds_loader = GameDsLoader(reader=csds_reader)"
@@ -184,6 +229,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7289a914",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be674481",
    "metadata": {},
    "outputs": [],
    "source": []
