--- a/notebooks/tutorial/1 - Setup.ipynb
+++ b/notebooks/tutorial/1 - Setup.ipynb
@@ -88,12 +88,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98702c47",
+   "cell_type": "markdown",
+   "id": "b776ea34",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Optional: Setup your usual suspects\n",
+    "\n",
+    "At the top of most notebooks to do data science, we find ourselves importing the same things over and over. Rather than searching through notebooks to copy-paste that, we put this common code into `../usual_suspects.py`. That way, we can use jupyter magic of `%load ../usual_suspects.py` to pull that code into a cell. After running the magic, it will comment out the `%load` line and the code within `../usual_suspects.py` will appear. *Run the cell again to run that code.*\n",
+    "\n",
+    "_**Optionally edit usual_suspects.py in the notebooks folder to help you start up new notebooks. Then run the cell below to see it in action.**_"
+   ]
   },
   {
    "cell_type": "code",
@@ -101,15 +105,9 @@
    "id": "ca580b3e",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "592f27ae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "%load ../usual_suspects.py"
+   ]
   }
  ],
  "metadata": {
