--- a/notebooks/tutorial/2 - Download data.ipynb
+++ b/notebooks/tutorial/2 - Download data.ipynb
@@ -7,11 +7,20 @@
    "source": [
     "## Downloading the data\n",
     "\n",
-    "We built in a simple downloader for the sample data. The sample data are 12 matches and consist of ~400 files and ~300mb and takes ~20 minutes to download with the simple downloader. For a larger dataset, you may want to copy the data to your S3 bucket then use something like `aws s3 sync s3://your-cool-bucket/sample-csds-micro .` to download locally.\n",
+    "We built in a simple downloader for the sample data. The properties of the sample data are:\n",
     "\n",
-    "Set your `dataset_id` from AWS. You can find this by: \n",
+    "- 12 matches\n",
+    "- ~400 files \n",
+    "- ~300mb\n",
+    "- ~20 minutes to download with the simple downloader\n",
     "\n",
-    "- Log in to AWS and go to the AWS Data Exchange.\n",
+    "For a larger dataset, you should copy the dataset to your s3 bucket and download it from there.\n",
+    "\n",
+    "Set your `dataset_id` from AWS. Follow these steps:\n",
+    "\n",
+    "- Log in to AWS.\n",
+    "- Subscribe to the [Sample dataset](https://aws.amazon.com/marketplace/pp/prodview-42sep6wtmcfvg) if you have not already.\n",
+    "- Navigate to the AWS Data Exchange.\n",
     "- Under \"My Subscriptions\" click \"Entitled data\".\n",
     "- Find `PureSkill.gg Competitive CS:GO Sample Data` in the list.\n",
     "- Expand the dropdown to find `sample-csds-micro` and click on it.\n",
@@ -29,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_id = 'ADD_DATASET_ID_HERE'"
+    "dataset_id = '27cb2d5cd702007de08d8d08417c9c40'"
    ]
   },
   {
@@ -43,7 +52,7 @@
     "from pureskillgg_makenew_pyskill.notebook import setup_notebook\n",
     "from pureskillgg_dsdk.exchange import download_dataexchange_dataset_revision\n",
     "\n",
-    "setup_notebook(silent=True)"
+    "setup_notebook()"
    ]
   },
   {
@@ -58,14 +67,6 @@
     "output_path = os.environ.get('PURESKILLGG_TOME_DS_COLLECTION_PATH')\n",
     "download_dataexchange_dataset_revision(output_path, dataset_id)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6843a27",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
