--- a/notebooks/tutorial/3 - Make header tome.ipynb
+++ b/notebooks/tutorial/3 - Make header tome.ipynb
@@ -2,14 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e88c9df8",
+   "metadata": {},
+   "source": [
+    "## Introduction to tomes\n",
+    "\n",
+    "Let's say you wanted to cluster smoke grenades on dust2. One match may have ~100 smokes which isn't enough to do clustering. To get a large enough dataset for clustering, you need hundreds of thousands or millions of smokes. You would have to loop through thousands of matches and read thousands of files. No matter the file size, reading so many files is time consuming and cumbersome.\n",
+    "\n",
+    "The solution to this is combining the data from many matches into a \"Tome\".  Once created, a tome allows you to read in the data from thousands of matches without having to read in thousands of files."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "028fe85e",
    "metadata": {},
    "source": [
     "## Make header tome\n",
     "\n",
-    "The header tome uses glob to find your files, read in the header channel, and stitch them all together into a *header tome*. Each row corresponds to one match. CSDS files that are not in the main header tome are invisible in subsequent steps. Right now, the file search assumes your files are nested to the same level, but a more robust csds finder is possible, just open a PR.\n",
+    "To start making tomes, we must make a *header tome*. This tome contains the path to all matches that will be considered as tome members.  The header tome maker uses glob to find your files, read in the header channel, and stitch them all together. Each row corresponds to one match. CSDS files that are not in the main header tome are invisible in subsequent steps. Right now, the file search assumes your files are nested to the same level, but a more robust csds finder is possible, just open a PR.\n",
     "\n",
-    "You can also make subheader tomes that select a fraction of the header tome rows. An example of a subheader tome that selects only matches on dust2 is in the second to last cell. Subheader tomes are useful when exploring certain maps, skill ranges, or anything that can be selected for from a header. \n",
+    "You can also make subheader tomes that filters out some of the header tome rows. An example of a subheader tome that selects only matches on dust2 is in the second to last cell. Subheader tomes are useful when exploring certain maps, skill ranges, or any info from a match that can be found in the header. \n",
     "\n",
     "_**Run this notebook as-is.**_"
    ]
@@ -17,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dd172ac",
+   "id": "9e277e9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,23 +39,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da596593",
+   "id": "8dd172ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "setup_notebook(silent=True)"
+    "setup_notebook()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc6274ba",
+   "id": "3354b14e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from pureskillgg_dsdk.tome import TomeCuratorFs \n",
-    "curator = TomeCuratorFs()"
+    "from pureskillgg_dsdk.tome import create_tome_curator "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "500f3c44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curator = create_tome_curator()"
    ]
   },
   {
@@ -78,9 +99,8 @@
     "df = curator.get_dataframe(header_name)\n",
     "keys = curator.get_keyset(header_name)\n",
     "if df is None:\n",
-    "    print('something went wrong when making the header.')\n",
-    "else:\n",
-    "    print('there are',len(df),'matches in the header')"
+    "    raise RuntimeError('Something went wrong when making the header.')\n",
+    "print('There are',len(df),'matches in the header.')"
    ]
   },
   {
@@ -90,10 +110,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def map_selector(map_name):\n",
+    "def map_name_selector(map_name):\n",
     "    return lambda df: df['map_name']==map_name\n",
     "\n",
-    "subheader_loader = curator.create_subheader_tome('subheader_dust2', map_selector('de_dust2'))"
+    "subheader_loader = curator.create_subheader_tome('subheader_dust2', map_name_selector('de_dust2'))"
    ]
   },
   {
@@ -112,15 +132,9 @@
    "id": "bd9b2092",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "122d4dfa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
