--- a/notebooks/tutorial/4 - Do datascience exploration.ipynb
+++ b/notebooks/tutorial/4 - Do datascience exploration.ipynb
@@ -7,9 +7,11 @@
    "source": [
     "## Time to do some data science\n",
     "\n",
-    "Below is an example of exploring the data for a single match. We will explore the number of footsteps players make as a function of rank, wins, and friendly commends.\n",
+    "Before creating a tome, we must decide on how to transform our data before concatenating. Therefore, we will explore the data for a single match. \n",
     "\n",
-    "After developing the functions that do our data processing, we moved them to `pureskillgg_makenew_pyskill\\tutorial_datascience\\footsteps_example.py` so that we can export them to the next notebook and avoid code duplication. This also lets the PureSkill.gg Coach import these functions.\n",
+    "We will investigate the number of footsteps players make as a function of rank, wins, and friendly commends.\n",
+    "\n",
+    "After we developed the code that does our data processing, we moved them to functions and put them in `pureskillgg_makenew_pyskill\\tutorial_datascience\\footsteps_example.py` so that we can import them in the next notebook. This avoids code duplication and will let the PureSkill.gg Coach import these functions in the future!\n",
     "\n",
     "_**Run this notebook as-is.**_"
    ]
@@ -50,14 +52,14 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from pureskillgg_dsdk.tome import TomeCuratorFs\n",
+    "from pureskillgg_dsdk.tome import create_tome_curator\n",
     "\n",
     "pd.set_option(\"display.max_columns\", 150)\n",
     "pd.set_option(\"display.max_rows\", 150)\n",
     "pd.set_option(\"display.min_rows\", 150)\n",
     "# pd.set_option('display.float_format', '{:.4f}'.format)\n",
     "\n",
-    "curator = TomeCuratorFs()\n"
+    "curator = create_tome_curator()"
    ]
   },
   {
@@ -77,6 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ds_name = os.environ.get('PURESKILLGG_TOME_DS_TYPE')\n",
     "header_name = os.environ.get('PURESKILLGG_TOME_DEFAULT_HEADER_NAME')\n",
     "df_header = curator.get_dataframe(header_name)"
    ]
@@ -98,19 +101,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_path=df_header.head(2)['ds_path'][0]\n",
-    "key=df_header.head(2)['key'][0]\n",
+    "# Just grab the first match :)\n",
+    "\n",
+    "full_path = df_header['ds_path'][0]\n",
+    "key = df_header['key'][0]\n",
     "root_path = full_path.split(key)[0]\n",
-    "manifest_key = os.sep.join([key,'csds'])\n"
+    "manifest_key = os.sep.join([key, ds_name])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fa8e42d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -119,7 +116,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# os.environ.get('PURESKILLGG_TOME_DS_COLLECTION_PATH')\n",
     "csds_reader = DsReaderFs(\n",
     "    root_path=root_path,\n",
     "    manifest_key=manifest_key,\n",
@@ -146,7 +142,7 @@
    "outputs": [],
    "source": [
     "for channel in manifest['channels']:\n",
-    "    print(channel['channel'],'-',len(channel['columns']),'columns')"
+    "    print(channel['channel'], '-', len(channel['columns']), 'columns')"
    ]
   },
   {
@@ -156,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = csds_loader.get_channels()"
+    "data = csds_loader.get_channels() # This reads in all channels because we gave no reading instructions."
    ]
   },
   {
@@ -176,7 +172,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_footsteps_total=data['player_footstep'].groupby('player_id_fixed',as_index=False).size().rename(columns={'size':'steps'})\n",
+    "df_footsteps_total = (\n",
+    "    data['player_footstep']\n",
+    "    .groupby('player_id_fixed', as_index=False)\n",
+    "    .size()\n",
+    "    .rename(columns={'size':'steps'})\n",
+    ")\n",
     "df_footsteps_total"
    ]
   },
@@ -187,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pi=data['player_info']\n",
+    "pi = data['player_info']\n",
     "pi.head()"
    ]
   },
@@ -198,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pi_simple=pi[['player_id_fixed','commends_friendly','wins','rank']].groupby('player_id_fixed',as_index=False).max()\n",
+    "pi_simple=pi[['player_id_fixed', 'commends_friendly', 'wins', 'rank']].groupby('player_id_fixed',as_index=False).max()\n",
     "pi_simple"
    ]
   },
@@ -220,26 +221,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_final = pd.merge(df_footsteps_total,pi_simple,how='left',on='player_id_fixed')\n",
-    "df_final['map_name']=map_name\n",
+    "df_final = pd.merge(df_footsteps_total, pi_simple, how='left', on='player_id_fixed')\n",
+    "df_final['map_name'] = map_name\n",
     "df_final"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7289a914",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be674481",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
