--- a/notebooks/tutorial/5 - Create tome.ipynb
+++ b/notebooks/tutorial/5 - Create tome.ipynb
@@ -7,11 +7,23 @@
    "source": [
     "## Create a tome \n",
     "\n",
-    "To make a tome, we use the `make_tome` function of the tome curator. We only need to provide the name of the tome we are making and the name of the header or subheader tome to serve as the index of matches. \n",
+    "The general process for making a tome is:\n",
+    "\n",
+    "1. Choose a \"header tome\" as an index.\n",
+    "1. Load the data from a match.\n",
+    "1. Transform that data.\n",
+    "1. Finalize results into a single data frame.\n",
+    "1. Concat that dataframe with the others.\n",
+    "1. Repeat from step 2 until no more matches remain.\n",
+    "\n",
+    "\n",
+    "To make a tome, we use the `make_tome` function of the tome curator. This function handles reading the data science files, concatenating dataframes, writing tome pages, deciding when to write tome pages, and keeping track of matches included. We only need to provide the name of the tome we are making and the name of the header or subheader tome to serve as the index of matches. \n",
     "\n",
     "An important (but optional) parameter is the `ds_reading_instructions` where you only read in certain channels and columns for each match. This generally provides a drastic speed up because of how large some channels are, particularly `player_vector`, `player_status`, and `tick`. Avoiding reading those channels altogether will speed things up.\n",
     "\n",
-    "_**Run this notebook as is.**_"
+    "It is possible that we don't want to include data from a match. In that case, you can pass `None` into the tome maker and this will acknowledge the match data as included without changing the data.\n",
+    "\n",
+    "_**Run this notebook as-is.**_"
    ]
   },
   {
@@ -50,14 +62,14 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from pureskillgg_dsdk.tome import TomeCuratorFs\n",
+    "from pureskillgg_dsdk.tome import create_tome_curator\n",
     "\n",
     "pd.set_option(\"display.max_columns\", 150)\n",
     "pd.set_option(\"display.max_rows\", 150)\n",
     "pd.set_option(\"display.min_rows\", 150)\n",
     "# pd.set_option('display.float_format', '{:.4f}'.format)\n",
     "\n",
-    "curator = TomeCuratorFs()\n"
+    "curator = create_tome_curator()\n"
    ]
   },
   {
@@ -67,7 +79,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pureskillgg_makenew_pyskill.tutorial_datascience import aggregate_footsteps, simplify_player_info, get_map_name, assemble_final_df"
+    "# import the functions from step 4\n",
+    "from pureskillgg_makenew_pyskill.tutorial import (\n",
+    "    aggregate_footsteps, \n",
+    "    simplify_player_info,\n",
+    "    get_map_name, \n",
+    "    assemble_final_df\n",
+    ")"
    ]
   },
   {
@@ -77,11 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "header_name = os.environ.get('PURESKILLGG_TOME_DEFAULT_HEADER_NAME')\n",
     "tomer = curator.make_tome(\n",
     "    'footsteps_by_rank',\n",
-    "    header_tome_name = header_name,\n",
-    "    behavior_if_partial='overwrite',\n",
     "    ds_reading_instructions=[\n",
     "        {\n",
     "            \"channel\": 'player_footstep',\n",
@@ -137,6 +152,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d335208e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4020978a",
    "metadata": {},
    "outputs": [],
    "source": []
