--- a/notebooks/tutorial/6 - Train data science models.ipynb
+++ b/notebooks/tutorial/6 - Train data science models.ipynb
@@ -7,6 +7,15 @@
    "source": [
     "## Explore tome and train models\n",
     "\n",
+    "A tome consists of four things\n",
+    "\n",
+    "- **The keysets** - A simple list of keys that are included in this tome.\n",
+    "- **The dataframes** - The data.\n",
+    "- **The manifest** - A listing of availble keyset/dataframe files and other metadata about the tome.\n",
+    "- **The header** - This provides the target list of keys while making the tome. Generally used by internal processes only. This is what makes tomes \"immutable\" once started or finished.\n",
+    "\n",
+    "Because they can be large, the combined dataframe data are saved in separate files called \"pages\". You can set a max (memory) size for each page when making a tome.\n",
+    "\n",
     "Let's read in that tome and train a model to go from number of footsteps to rank, obviously.\n",
     "\n",
     "_**Run this notebook as-is.**_"
@@ -48,14 +57,14 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from pureskillgg_dsdk.tome import TomeCuratorFs\n",
+    "from pureskillgg_dsdk.tome import create_tome_curator\n",
     "\n",
     "pd.set_option(\"display.max_columns\", 150)\n",
     "pd.set_option(\"display.max_rows\", 150)\n",
     "pd.set_option(\"display.min_rows\", 150)\n",
     "# pd.set_option('display.float_format', '{:.4f}'.format)\n",
     "\n",
-    "curator = TomeCuratorFs()\n"
+    "curator = create_tome_curator()\n"
    ]
   },
   {
@@ -105,12 +114,24 @@
    "id": "7c3a15e3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['rank_fixed']=df['rank'].apply(lambda x: x/2).apply(round)\n",
+    "\n",
+    "df.groupby('rank_fixed',as_index=False).max()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "0fff4c68",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ac208e0",
    "metadata": {},
    "outputs": [],
    "source": []
